# QuantDreamCpp

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ubuntu.yml
documentation/: POSITION_AUTO_CLOSE_EXAMPLE.md  POSITION_MANAGER_CALLBACKS.md
include/alpha_vantage/: AlphaVantage.h  CurlHttpClient.h  DataPoint.h  Parser.h  TimeSeries.h
include/mafirm/data/: alpha_vantage.h
include/mafirm/math/: basic.h
include/mafirm/utils/: dummy.h
include/monteCarlo/: engine.h  riskMeasures.h  riskMeasures.tpp
include/quantdream/core/algorithms/: sort.h
include/quantdream/core/concepts/: eigen.h  numeric.h  numeric_like.h
include/quantdream/core/eigen_utils/: stl_to_eigen.h
include/quantdream/legacy/alpha_vantage/: AlphaVantage.h  IHttpClient.h  Parser.h
include/quantdream/legacy/csvReader/: CsvReader.h
include/quantdream/legacy/monteCarlo/: ERCOptimizer.h  engine.h  utils.h
include/quantdream/statistics/robust/: robustEstimators.h
include/quantdream/statistics/robust/center/: trimmed_mean.h  winsorized_mean.h
source/alpha_vantage/: AlphaVantage.cpp  CurlHttpClient.cpp  IHttpClient.cpp  Parser.cpp
source/csvReader/: CsvReader.cpp
source/data/: alpha_vantage.cpp
source/math/: basic.cpp
source/monteCarlo/: ERCOptimizer.cpp  engine.cpp  riskMeasures.cpp
source/quantdream/legacy/alpha_vantage/: AlphaVantage.cpp  CurlHttpClient.cpp  IHttpClient.cpp  Parser.cpp
source/quantdream/legacy/monteCarlo/: ERCOptimizer.cpp  engine.cpp  riskMeasures.cpp
source/utils/: dummy.cpp
standalone/datasets/: etf_aggressive_portfolio.csv  msci_portfolio.csv
standalone/source/: MonteCarloSimulation.cpp  alphaVantageGetData.cpp  loadYFCSV.cpp  main.cpp
standalone/source/ibkr/: get_market_data.cpp  monitor_account.cpp  position_manager_example.cpp  test_strategy.cpp
standalone/source/legacy/: MonteCarloSimulation.cpp  RollingMonteCarloSimulation.cpp  alphaVantageGetData.cpp  comparison.cpp  loadYFCSV.cpp
test/source/: main.cpp  main_test.cpp  test.cpp
test/source/statistics/robust/center/: trimmed_mean.cpp  winsorized_mean.cpp
